--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -17,6 +17,7 @@
 .quick-input-titlebar {
 	display: flex;
 	align-items: center;
+	padding: 4px 0px 0px 0px;
 }
 
 .quick-input-left-action-bar {
@@ -26,7 +27,7 @@
 }
 
 .quick-input-title {
-	padding: 3px 0px;
+	font-weight: 500;
 	text-align: center;
 	text-overflow: ellipsis;
 	overflow: hidden;
