--- a/src/vs/base/parts/quickinput/browser/media/quickInput.css
+++ b/src/vs/base/parts/quickinput/browser/media/quickInput.css
@@ -11,7 +11,7 @@
 	right: 0;
 	margin: 0 auto;
 	-webkit-app-region: no-drag;
-	border-radius: 4px;
+	border-radius: 7px;
 }
 
 .quick-input-titlebar {
@@ -38,7 +38,7 @@
 	flex: 1;
 }
 
-.quick-input-right-action-bar > .actions-container {
+.quick-input-right-action-bar>.actions-container {
 	justify-content: flex-end;
 }
 
@@ -135,7 +135,7 @@
 	overflow-wrap: break-word;
 }
 
-.quick-input-message > .codicon {
+.quick-input-message>.codicon {
 	margin: 0 0.2em;
 	vertical-align: text-bottom;
 }
@@ -156,7 +156,8 @@
 }
 
 .quick-input-widget.hidden-input .quick-input-list {
-	margin-top: 4px; /* reduce margins when input box hidden */
+	margin-top: 4px;
+	/* reduce margins when input box hidden */
 	padding-bottom: 4px;
 }
 
@@ -219,30 +220,33 @@
 .quick-input-widget .quick-input-list .quick-input-list-checkbox {
 	display: none;
 }
+
 .quick-input-widget.show-checkboxes .quick-input-list .quick-input-list-checkbox {
 	display: inline;
 }
 
-.quick-input-list .quick-input-list-rows > .quick-input-list-row {
+.quick-input-list .quick-input-list-rows>.quick-input-list-row {
 	display: flex;
 	align-items: center;
 }
 
-.quick-input-list .quick-input-list-rows > .quick-input-list-row .monaco-icon-label,
-.quick-input-list .quick-input-list-rows > .quick-input-list-row .monaco-icon-label .monaco-icon-label-container > .monaco-icon-name-container {
-	flex: 1; /* make sure the icon label grows within the row */
+.quick-input-list .quick-input-list-rows>.quick-input-list-row .monaco-icon-label,
+.quick-input-list .quick-input-list-rows>.quick-input-list-row .monaco-icon-label .monaco-icon-label-container>.monaco-icon-name-container {
+	flex: 1;
+	/* make sure the icon label grows within the row */
 }
 
-.quick-input-list .quick-input-list-rows > .quick-input-list-row .codicon[class*='codicon-'] {
+.quick-input-list .quick-input-list-rows>.quick-input-list-row .codicon[class*='codicon-'] {
 	vertical-align: text-bottom;
 }
 
-.quick-input-list .quick-input-list-rows .monaco-highlighted-label > * {
+.quick-input-list .quick-input-list-rows .monaco-highlighted-label>* {
 	opacity: 1;
 }
 
 .quick-input-list .quick-input-list-entry .quick-input-list-entry-keybinding {
-	margin-right: 8px; /* separate from the separator label or scrollbar if any */
+	margin-right: 8px;
+	/* separate from the separator label or scrollbar if any */
 }
 
 .quick-input-list .quick-input-list-label-meta {
@@ -257,7 +261,8 @@
 }
 
 .quick-input-list .quick-input-list-entry .quick-input-list-separator {
-	margin-right: 4px; /* separate from keybindings or actions */
+	margin-right: 4px;
+	/* separate from keybindings or actions */
 }
 
 .quick-input-list .quick-input-list-entry-action-bar {
@@ -284,7 +289,8 @@
 }
 
 .quick-input-list .quick-input-list-entry-action-bar {
-	margin-right: 4px; /* separate from scrollbar */
+	margin-right: 4px;
+	/* separate from scrollbar */
 }
 
 .quick-input-list .quick-input-list-entry .quick-input-list-entry-action-bar .action-label.always-visible,
@@ -298,6 +304,7 @@
 .quick-input-list .monaco-list-row.focused .quick-input-list-entry .quick-input-list-separator {
 	color: inherit
 }
+
 .quick-input-list .monaco-list-row.focused .monaco-keybinding-key {
 	background: none;
 }
