--- a/src/vs/base/browser/ui/button/button.css
+++ b/src/vs/base/browser/ui/button/button.css
@@ -7,13 +7,14 @@
 	box-sizing: border-box;
 	display: flex;
 	width: 100%;
-	padding: 4px;
+	padding: 3px 4px;
 	border-radius: 2px;
 	text-align: center;
 	cursor: pointer;
 	justify-content: center;
 	align-items: center;
 	border: 1px solid var(--vscode-button-border, transparent);
+	line-height: 18px;
 }
 
 .monaco-text-button:focus {
